--- a/hw3/package.json
+++ b/hw3/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jquery": "^4.0.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
